Añadida otro elemento del body
He añadido una seccion en el documento asi como un esbozo de
articulo.
También un menú desplegable al final

--- a/css/estilosPropios.css
+++ b/css/estilosPropios.css
@@ -101,3 +101,13 @@ figure img{
 figure img:hover {
   transform: scale(1.4);
 }
+section{
+  margin: 0.5em;
+}
+
+.padeo {
+  padding: 1em;
+}
+.margen {
+  margin:3em;
+}
